# smartweb

./: .gitignore  DATA_EXPORT_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  addresses_data.csv  affiliate_transactions_data.csv  beneficial_owners_data.csv  docker-compose.yml  financial_data.csv  group_membership_data.csv  groups_data.csv  officers_data.csv  relationships_data - Copy.csv  taxpayers_data.csv
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_derived_groups.py  003_add_graph_intelligence.py  004_add_geography.py  005_add_search_index_and_versioning.py  6fc5383b6719_add_officer_address_intermediary_tables_.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/routers/: admin.py  assistant.py  auth.py  beneficial_owners.py  derived_groups.py  entities.py  exports.py  group_map.py  groups.py  network.py  relationships.py  search.py  statistics.py  taxpayers.py
backend/app/core/: config.py  logging.py  rate_limit.py  security.py
backend/app/db/: base.py  neo4j.py  search_index.py  seed.py  seed_geography.py  seed_large.py  session.py
backend/app/db/adapters/: __init__.py  base.py  mysql.py  oracle.py  (+3 more)
backend/app/services/: aggregate_service.py  export_service.py  graph_intelligence_service.py  group_derivation_service.py  ingestion_service.py  neo4j_sync_service.py  network_service.py  search_service.py
backend/app/tests/: conftest.py  test_aggregates.py  test_auth.py  test_group_derivation.py  test_network.py  test_search.py
(+69 files in other folders)
